--- a/style.css
+++ b/style.css
@@ -97,15 +97,16 @@ svg {
 }
 
 
-
-
-
 .container {
   --max-width: 1110px;
   --padding: 1rem;
 
   width: min(var(--max-width), 100% - (var(--padding)*2));
   margin-inline: auto;
+}
+
+:where(.flow :not(:first-child)) {
+  margin-top: var(--flow-spacer, 3em);
 }
 
 .even-columns {
@@ -128,6 +129,14 @@ body {
   color: var(--clr-primary-400);
 }
 
+p:not([class]) {
+  opacity: 0.7;
+  max-width: 32ch;
+}
+
+p[data-width="wide"] {
+  max-width: 43ch;
+}
 /* button */
 
 .button {
@@ -230,16 +239,6 @@ body {
     text-align: center;
     font-weight: var(--fw-bold);
   }
-
-  /* .nav-list a {
-    text-decoration: none;
-    color: var(--clr-primary-400);
-  }
-
-  .nav-list a:hover,
-  .nav-list a:focus {
-    color: var(--clr-accent-400);
-  } */
 
   .mobile-nav-toggle {
     display: block;
