--- a/style.css
+++ b/style.css
@@ -105,10 +105,6 @@ svg {
   margin-inline: auto;
 }
 
-:where(.flow :not(:first-child)) {
-  margin-top: var(--flow-spacer, 3em);
-}
-
 .even-columns {
   display: grid;
   gap: 1rem;
@@ -120,6 +116,21 @@ svg {
     grid-auto-columns: 1fr;
   }
 }
+
+.vertical-align-center {
+  align-items: center;
+}
+
+@media (min-width: 50em) {
+  .justify-self-end-md {
+    justify-self: end;
+  }
+}
+
+:where(.flow :not(:first-child)) {
+  margin-top: var(--flow-spacer, 3em);
+}
+
 
 /* general styling */
 
@@ -250,6 +261,34 @@ p[data-width="wide"] {
 
 .mobile-nav-toggle .icon-close {
   display: none;
+}
+
+/* CTA */
+
+.cta {
+  position: relative;
+  isolation: isolate;
+  text-align: center;
+}
+
+@media (min-width: 50em) {
+  .cta {
+    text-align: left;
+  }
+}
+
+.cta::before {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  inset: 0;
+  background-image: 
+  url(images/bg-tablet-pattern.svg),
+  url(images/bg-tablet-pattern.svg);
+  background-repeat: no-repeat;
+  background-position: -20rem 0, 65rem -40em;
+  opacity: 0.1;
+  
 }
 
 
