--- a/style.css
+++ b/style.css
@@ -99,9 +99,9 @@ svg {
 
 .container {
   --max-width: 1110px;
-  --padding: 1rem;
+  --container-padding: 1rem;
 
-  width: min(var(--max-width), 100% - (var(--padding)*2));
+  width: min(var(--max-width), 100% - (var(--container-padding)*2));
   margin-inline: auto;
 }
 
@@ -226,7 +226,7 @@ p[data-width="wide"] {
 @media (max-width: 50em) {
   .primary-navigation {
     display: none;
-
+    z-index: 100;
     position: fixed;
     inset: 7rem var(--size-400) auto;
     background: var(--clr-neutral-100);
@@ -402,6 +402,77 @@ p[data-width="wide"] {
   
 }
 
+/* numbered items */
+.numbered-items{
+  counter-reset: count;
+  margin-inline:auto;
+  width: fit-content;
+}
+
+.numbered-items li {
+  counter-increment: count;
+}
+
+.numbered-items div {
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  align-items: center;
+  column-gap: var(--size-400);
+  position: relative;
+}
+
+.numbered-items__title {
+  grid-row: 1/2;
+  grid-column: 2/3;
+  line-height: 1;
+}
+
+.numbered-items .numbered-items__body {
+  grid-column: 1/-1;
+  opacity: 0.7;
+  max-width: 32ch;
+}
+
+@media (min-width: 30em) {
+  .numbered-items .numbered-items__body {
+    grid-column: 2/-1;
+  }
+    
+}
+
+.numbered-items div::before,
+.numbered-items div::after {
+  height: 40px;
+}
+
+
+.numbered-items div::before {
+  display: flex;
+  align-items: center;
+  content: "0" counter(count);
+  background-color: var(--clr-accent-400);
+  color: var(--clr-neutral-100);
+  font-weight: var(--fw-bold);
+  padding: 0 var(--size-500);
+  border-radius: 100vw;
+  grid-row: 1/2;
+  grid-column: 1/2;
+}
+
+@media (max-width:30em) {
+  .numbered-items div::after {
+    --bg: var(--clr-accent-100);
+    content: "";
+    display: block;
+    z-index: -1;
+    grid-column: 1/-1;
+    grid-row: 1/2;
+    border-radius: 100vw 0 0 100vw;
+    background-color: var(--bg);
+    box-shadow: 5em 0 0 var(--bg);
+  }
+}
+
 
 /* utilities class */
 
@@ -416,6 +487,20 @@ p[data-width="wide"] {
   clip: rect(0,0,0,0) !important;
   white-space: nowrap !important;
   border: 0 !important;
+}
+
+.text-align {
+  text-align: center;
+}
+
+@media (max-width: 50em) {
+  .text-center-sm-only {
+    text-align: center;
+  }
+
+  .text-center-sm-only p {
+    margin-inline: auto;
+  }
 }
 
 .text-primary-400 {
@@ -484,6 +569,10 @@ p[data-width="wide"] {
 
 .padding-block-700 {
   padding-block: var(--size-700);
+}
+
+.margin-bottom-700 {
+  margin-block-end: var(--size-700);
 }
 
 .display-sm-none {
